Agrego estilos secciones e imagenes

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -793,15 +793,15 @@
                         <!-- .et_pb_gallery_items -->
                       </div>
                       <!-- .et_pb_gallery -->
-                      <div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light et_pb_text_align_left">
+                      <!-- <div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light et_pb_text_align_left">
                         <div class="et_pb_text_inner">
                           <p style="text-align: left">
                             MARDELCUP Futbol Femenino Mar del Plata
                           </p>
                         </div>
-                      </div>
+                      </div> -->
                       <!-- .et_pb_text -->
-                      <div class="et_pb_module et_pb_gallery et_pb_gallery_3 et_pb_bg_layout_light et_pb_gallery_grid">
+                      <!-- <div class="et_pb_module et_pb_gallery et_pb_gallery_3 et_pb_bg_layout_light et_pb_gallery_grid">
                         <div class="et_pb_gallery_items et_post_gallery clearfix" data-per_page="20">
                           <div class="et_pb_gallery_item et_pb_grid_item et_pb_bg_layout_light">
                             <div class="et_pb_gallery_image landscape">
@@ -872,8 +872,8 @@
                             </div>
                           </div>
                         </div>
-                        <!-- .et_pb_gallery_items -->
-                      </div>
+                        
+                      </div> -->
                       <!-- .et_pb_gallery -->
                       <div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light et_pb_text_align_left">
                         <div class="et_pb_text_inner">
