--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -569,7 +569,7 @@
                                     target="_blank" 
                                     rel="noopener noreferrer" 
                                     class="enlace-doc">
-                                    Programa de actividades
+                                    Cronograma de actividades
                                 </a>
                             </li>
                         </ul>
@@ -586,7 +586,7 @@
                                             target="_blank" 
                                             rel="noopener noreferrer" 
                                             class="enlace-doc">
-                                            Alojamiento
+                                            Servicios Incluídos
                                         </a>
                                 </li>
                             </br>
@@ -595,11 +595,12 @@
                                             target="_blank" 
                                             rel="noopener noreferrer" 
                                             class="enlace-doc">
-                                            Clubes participantes edición 2024
+                                            Clubes participantes ediciones anteriores
                                     </a>
                                 </li>
                             </br>
-                          <li>
+                          
+                            <li>
                                 <a href="docs/hoteleria.pdf" 
                                     target="_blank" 
                                     rel="noopener noreferrer" 
@@ -607,6 +608,21 @@
                                     Hotelería
                                 </a>
                             </li>
+
+                            </br>
+                          
+                            <li>
+                                <a href="https://www.facebook.com/Sevenhockeycopabristol" 
+                                    target="_blank" 
+                                    rel="noopener noreferrer" 
+                                    class="enlace-doc">
+                                    Seguinos 
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png"
+         alt="Facebook"
+         style="width: 20px; height: 20px; margin-right: 10px;">
+                                </a>
+                            </li>
+
                         </ul>
                       </div>
                       </div>
@@ -748,7 +764,7 @@
               <div id="premium" class="feature fadeIn fadeInC" style="opacity: 1;">
                 <div>
                   <div>
-                    <h1>PREMIUM CUP MAMIS HOCKEY</h1>
+                    <h1>PREMIUM CUP MAMIS HOCKEY 2026</h1>
 
                     <p class="description">
                       Para mas informacion contactanos por Whatsapp. <br>
@@ -995,7 +1011,9 @@
                   <div
                     class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_right et_pb_module">
                     <a class="et_pb_button et_pb_button_0 et_hover_enabled et_pb_bg_layout_light"
-                      href="./galeria/index.html">Galería de Imágenes</a>
+                      target="_blank" 
+                      href="./galeria/index.html">Galería de Imágenes
+                    </a>
                   </div>
                 </div>
                 <div class="et_pb_column et_pb_column_1_4 et_pb_column_31 et_pb_css_mix_blend_mode_passthrough">
