--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -435,11 +435,13 @@
                       class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix et_pb_bg_layout_dark has_follow_button">
                       <li
                         class="et_pb_social_media_follow_network_0 et_pb_social_icon et_pb_social_network_link et-social-facebook et_pb_social_media_follow_network_0">
-                        <a href="https://www.facebook.com/pg/dseventosdeportivos/about/?ref=page_internal"
+                       <!--  <a href="https://www.facebook.com/pg/dseventosdeportivos/about/?ref=page_internal"
                           class="icon et_pb_with_border" title="Follow on Facebook" target="_blank"><span
                             class="et_pb_social_media_follow_network_name" aria-hidden="true">Seguir</span></a><a
                           href="https://www.facebook.com/pg/dseventosdeportivos/about/?ref=page_internal"
-                          class="follow_button" title="Facebook" target="_blank">Seguir</a>
+                          class="follow_button" title="Facebook" target="_blank">
+                          Seguir
+                        </a> -->
                       </li>
                       <!-- <li
                         class="et_pb_social_media_follow_network_1 et_pb_social_icon et_pb_social_network_link et-social-instagram et_pb_social_media_follow_network_1">
@@ -533,7 +535,7 @@
                   <div class="et_pb_column et_pb_column_4_4 et_pb_column_10 et_pb_css_mix_blend_mode_passthrough et-last-child">
                     <div class="et_pb_module et_pb_text et_pb_text_8 et_pb_bg_layout_light et_pb_text_align_right">
                       <div class="et_pb_text_inner">
-                        <h2 style="text-align: center">TORNEO COPA BRISTOL:</h2>
+                        <h2 style="text-align: center">SEVEN HOCKEY COPA BRISTOL MAR DEL PLATA</h2>
                       </div>
                     </div>
                   </div>
