Agrego estilos secciones e imagenes

--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -838,17 +838,12 @@
                     <h1>Seven Hockey Copa Bristol Mar del Plata</h1>
 
                     <p class="description">
-                      El evento de hockey femenino mas convocante de nuestra
-                      ciudad. Participan mas de 35 clubes de todo el pais.
-                      Congrega a mas de 1800 jugadoras. Disfrutá de tu deporte
-                      favorito junto a un equipo de profesionales que te
-                      acompañarán en cada momento. Recreación con nuestro
-                      equipo de profes! Con quienes unimos fuerzas hace ya 11
-                      años. Musica, carpa de maquillaje artistico, fiesta de
-                      cierre y muchas sorpresas mas!!! No te quedes afuera.
-                      Sumate ya! Para mas informacion contactanos por
-                      Whatsapp.
-
+                      El evento de hockey femenino mas convocante de nuestra ciudad. 
+                      Participan mas de 25 clubes de todo el pais. Congrega a mas de 1500 jugadoras. 
+                      Disfrutá de tu deporte favorito junto a un equipo de profesionales que te acompañarán en 
+                      cada momento. Recreación con nuestro equipo de profes! con quienes unimos 
+                      fuerzas hace ya 13 años. Musica, carpa de maquillaje artistico y muchas sorpresas mas!!! 
+                      No te quedes afuera. Sumate ya! Para mas informacion contactanos por Whatsapp.
                       <br />
                       <i>Declarado de interés deportivo por EMDER</i>
                     </p>
