Agrego estilos secciones e imagenes

--- a/prueba-imagenes.html
+++ b/prueba-imagenes.html
@@ -839,7 +839,7 @@
 
                     <p class="description">
                       El evento de hockey femenino mas convocante de nuestra ciudad. 
-                      Participan mas de 25 clubes de todo el pais. Congrega a mas de 1500 jugadoras. 
+                      Participan mas de 25 clubes de todo el pais. Congrega a más de 1500 jugadoras. 
                       Disfrutá de tu deporte favorito junto a un equipo de profesionales que te acompañarán en 
                       cada momento. Recreación con nuestro equipo de profes! con quienes unimos 
                       fuerzas hace ya 13 años. Musica, carpa de maquillaje artistico y muchas sorpresas mas!!! 
