actualizacion final-2 index.html

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -1209,7 +1209,7 @@
                 <!-- .et_pb_section -->
                 <div class="et_pb_section et_pb_section_2 et_section_regular">
                   <div class="et_pb_row et_pb_row_3">
-                    <div
+                    <!-- <div
                       class="et_pb_column et_pb_column_4_4 et_pb_column_3 et_pb_css_mix_blend_mode_passthrough et-last-child">
                       <div class="et_pb_module et_pb_text et_pb_text_5 et_pb_bg_layout_light et_pb_text_align_center">
                         <div class="et_pb_text_inner">
@@ -1217,7 +1217,7 @@
                           <p>&nbsp;</p>
                         </div>
                       </div>
-                      <!-- .et_pb_text -->
+                     
                       <ul
                         class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix et_pb_bg_layout_light et_pb_text_align_center">
                         <li
@@ -1228,8 +1228,8 @@
                         </li>
 
                       </ul>
-                      <!-- .et_pb_counters -->
-                    </div>
+                      
+                    </div> -->
                     <!-- .et_pb_column -->
                   </div>
                   <!-- .et_pb_row -->
